--- a/users.yml
+++ b/users.yml
@@ -1,2 +1,8 @@
-:user1: password
-:user2: password2
+---
+:developer: "$2a$10$HnGUpCrlJ/9EHKpTnLS.IeOXGiFHJRsYwGauVqTd8n3yiaxnKsHPW"
+:user2: !ruby/string:BCrypt::Password
+  str: "$2a$10$0BmyE0bOUAr5KsgiMgF4B.ZzPJ4Agf9VbBvlN8znTxFJHybK0F1Vi"
+  version: 2a
+  cost: 10
+  salt: "$2a$10$0BmyE0bOUAr5KsgiMgF4B."
+  checksum: ZzPJ4Agf9VbBvlN8znTxFJHybK0F1Vi
